灰度直方图

--- a/HelloWinForms/HelloWinForms.csproj
+++ b/HelloWinForms/HelloWinForms.csproj
@@ -115,6 +115,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelloWinLevel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloWinLevel.Designer.cs">
+      <DependentUpon>HelloWinLevel.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelloXML.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -194,6 +200,9 @@
     <Compile Include="Utilities\Sample\Yaml\Hello.cs" />
     <Compile Include="Utilities\Sample\Yaml\Model.cs" />
     <Compile Include="Utilities\YamlHelper.cs" />
+    <Compile Include="WinLevelControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="Action\PRight.resx">
       <DependentUpon>PRight.cs</DependentUpon>
     </EmbeddedResource>
