--- a/HelloWinForms/HelloWinForms.csproj
+++ b/HelloWinForms/HelloWinForms.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\OpenCvSharp4.runtime.win.4.9.0.20240103\build\net48\OpenCvSharp4.runtime.win.props" Condition="Exists('..\packages\OpenCvSharp4.runtime.win.4.9.0.20240103\build\net48\OpenCvSharp4.runtime.win.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,8 +51,17 @@
     <Reference Include="Microsoft.CodeAnalysis.Scripting, Version=4.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeAnalysis.Scripting.Common.4.8.0\lib\netstandard2.0\Microsoft.CodeAnalysis.Scripting.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NPinyin, Version=0.2.6321.26573, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NPinyin.0.2.6321.26573\lib\net20\NPinyin.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenCvSharp4.4.9.0.20240103\lib\net48\OpenCvSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenCvSharp.Extensions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
+      <HintPath>..\packages\OpenCvSharp4.Extensions.4.9.0.20240103\lib\net48\OpenCvSharp.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
@@ -77,6 +89,9 @@
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.7.0.2\lib\net462\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Drawing.Common, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Drawing.Common.7.0.0\lib\net462\System.Drawing.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -91,6 +106,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Text.Encoding.CodePages, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.Encoding.CodePages.7.0.0\lib\net462\System.Text.Encoding.CodePages.dll</HintPath>
@@ -98,6 +114,11 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -162,11 +183,29 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelloAsync.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloAsync.Designer.cs">
+      <DependentUpon>HelloAsync.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelloChannel.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HelloChannel.Designer.cs">
       <DependentUpon>HelloChannel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloCombineFiles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloCombineFiles.Designer.cs">
+      <DependentUpon>HelloCombineFiles.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloCustomBar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloCustomBar.Designer.cs">
+      <DependentUpon>HelloCustomBar.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloDataGridView.cs">
       <SubType>Form</SubType>
@@ -174,11 +213,23 @@
     <Compile Include="HelloDataGridView.Designer.cs">
       <DependentUpon>HelloDataGridView.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelloDataGridViewGroup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloDataGridViewGroup.Designer.cs">
+      <DependentUpon>HelloDataGridViewGroup.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelloDateTimePicker.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HelloDateTimePicker.Designer.cs">
       <DependentUpon>HelloDateTimePicker.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloLog.Designer.cs">
+      <DependentUpon>HelloLog.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloOOP.cs">
       <SubType>Form</SubType>
@@ -215,6 +266,18 @@
       <DependentUpon>HelloRoslyn.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloRoslynUtility.cs" />
+    <Compile Include="HelloSerializableJson.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloSerializableJson.Designer.cs">
+      <DependentUpon>HelloSerializableJson.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloServiceController.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloServiceController.Designer.cs">
+      <DependentUpon>HelloServiceController.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelloSnowflake.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -250,6 +313,18 @@
     </Compile>
     <Compile Include="HelloVariable.Designer.cs">
       <DependentUpon>HelloVariable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloWaitHandle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloWaitHandle.Designer.cs">
+      <DependentUpon>HelloWaitHandle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloWindowWidthLevel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloWindowWidthLevel.Designer.cs">
+      <DependentUpon>HelloWindowWidthLevel.cs</DependentUpon>
     </Compile>
     <Compile Include="HelloWinLevel.cs">
       <SubType>Form</SubType>
@@ -317,8 +392,20 @@
     <Compile Include="HelloToolStrip.Designer.cs">
       <DependentUpon>HelloToolStrip.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelloYAML.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloYAML.Designer.cs">
+      <DependentUpon>HelloYAML.cs</DependentUpon>
+    </Compile>
     <Compile Include="HistogramLineControl.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MouseDrawRectangleForm3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MouseDrawRectangleForm3.Designer.cs">
+      <DependentUpon>MouseDrawRectangleForm3.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities\LogHelper.cs" />
     <Compile Include="Program.cs" />
@@ -352,14 +439,29 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HelloAsync.resx">
+      <DependentUpon>HelloAsync.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HelloChannel.resx">
       <DependentUpon>HelloChannel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloCombineFiles.resx">
+      <DependentUpon>HelloCombineFiles.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloCustomBar.resx">
+      <DependentUpon>HelloCustomBar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HelloDataGridView.resx">
       <DependentUpon>HelloDataGridView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HelloDataGridViewGroup.resx">
+      <DependentUpon>HelloDataGridViewGroup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HelloDateTimePicker.resx">
       <DependentUpon>HelloDateTimePicker.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloLog.resx">
+      <DependentUpon>HelloLog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HelloOOP.resx">
       <DependentUpon>HelloOOP.cs</DependentUpon>
@@ -394,6 +496,12 @@
     <EmbeddedResource Include="HelloRoslyn.resx">
       <DependentUpon>HelloRoslyn.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HelloSerializableJson.resx">
+      <DependentUpon>HelloSerializableJson.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloServiceController.resx">
+      <DependentUpon>HelloServiceController.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HelloSnowflake.resx">
       <DependentUpon>HelloSnowflake.cs</DependentUpon>
     </EmbeddedResource>
@@ -424,11 +532,23 @@
     <EmbeddedResource Include="HelloVariable.resx">
       <DependentUpon>HelloVariable.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HelloWaitHandle.resx">
+      <DependentUpon>HelloWaitHandle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloWindowWidthLevel.resx">
+      <DependentUpon>HelloWindowWidthLevel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HelloWinLevel.resx">
       <DependentUpon>HelloWinLevel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HelloXML.resx">
       <DependentUpon>HelloXML.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloYAML.resx">
+      <DependentUpon>HelloYAML.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MouseDrawRectangleForm3.resx">
+      <DependentUpon>MouseDrawRectangleForm3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -481,4 +601,10 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.3.4\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\OpenCvSharp4.runtime.win.4.9.0.20240103\build\net48\OpenCvSharp4.runtime.win.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\OpenCvSharp4.runtime.win.4.9.0.20240103\build\net48\OpenCvSharp4.runtime.win.props'))" />
+  </Target>
 </Project>
