--- a/HelloWinForms/packages.config
+++ b/HelloWinForms/packages.config
@@ -8,18 +8,24 @@
   <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="NPinyin" version="0.2.6321.26573" targetFramework="net48" />
+  <package id="OpenCvSharp4" version="4.9.0.20240103" targetFramework="net48" />
+  <package id="OpenCvSharp4.Extensions" version="4.9.0.20240103" targetFramework="net48" />
+  <package id="OpenCvSharp4.runtime.win" version="4.9.0.20240103" targetFramework="net48" />
   <package id="Serilog" version="3.1.1" targetFramework="net48" />
   <package id="Serilog.Sinks.Console" version="5.0.1" targetFramework="net48" />
   <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="7.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="7.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="7.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Encoding.CodePages" version="7.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="YamlDotNet" version="13.7.1" targetFramework="net48" />
 </packages>
