--- a/HelloWinForms/HelloWinForms.csproj
+++ b/HelloWinForms/HelloWinForms.csproj
@@ -82,6 +82,12 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NModbus, Version=3.0.81.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NModbus.3.0.81\lib\net46\NModbus.dll</HintPath>
+    </Reference>
+    <Reference Include="NModbus.Serial, Version=3.0.81.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NModbus.Serial.3.0.81\lib\net46\NModbus.Serial.dll</HintPath>
+    </Reference>
     <Reference Include="NPinyin, Version=0.2.6321.26573, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NPinyin.0.2.6321.26573\lib\net20\NPinyin.dll</HintPath>
     </Reference>
@@ -179,16 +185,16 @@
     <Compile Include="ActionUi\IconManager.cs" />
     <Compile Include="ActionUi\Sample\DialogConfig.cs" />
     <Compile Include="ActionUi\Sample\HorizontalPanelConfig.cs" />
-    <Compile Include="Action\PRight.cs">
+    <Compile Include="Actions\PRight.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Action\PRight.Designer.cs">
+    <Compile Include="Actions\PRight.Designer.cs">
       <DependentUpon>PRight.cs</DependentUpon>
     </Compile>
-    <Compile Include="Action\PTray.cs">
+    <Compile Include="Actions\PTray.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Action\PTray.Designer.cs">
+    <Compile Include="Actions\PTray.Designer.cs">
       <DependentUpon>PTray.cs</DependentUpon>
     </Compile>
     <Compile Include="BaseForm\UserControl1.cs">
@@ -344,6 +350,12 @@
     <Compile Include="HelloLogViewer.Designer.cs">
       <DependentUpon>HelloLogViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelloModbus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloModbus.Designer.cs">
+      <DependentUpon>HelloModbus.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelloOOP.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -481,6 +493,13 @@
     <Compile Include="HelloTemp.Designer.cs">
       <DependentUpon>HelloTemp.cs</DependentUpon>
     </Compile>
+    <Compile Include="HelloThreadTimer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HelloThreadTimer.Designer.cs">
+      <DependentUpon>HelloThreadTimer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelloThreadTimerStruct.cs" />
     <Compile Include="HelloTreeView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -499,6 +518,10 @@
     <Compile Include="HelloZip.Designer.cs">
       <DependentUpon>HelloZip.cs</DependentUpon>
     </Compile>
+    <Compile Include="Protocols\ModbusReadGroup.cs" />
+    <Compile Include="Protocols\ModbusPoint.cs" />
+    <Compile Include="Protocols\ModbusTcpClient.cs" />
+    <Compile Include="Protocols\PointItem.cs" />
     <Compile Include="VirtualKeyboardNumber.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -638,10 +661,10 @@
     <Compile Include="Utilities\TcpClientSelect.cs" />
     <Compile Include="Utilities\TimeHelper.cs" />
     <Compile Include="Utilities\YamlHelper.cs" />
-    <EmbeddedResource Include="Action\PRight.resx">
+    <EmbeddedResource Include="Actions\PRight.resx">
       <DependentUpon>PRight.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Action\PTray.resx">
+    <EmbeddedResource Include="Actions\PTray.resx">
       <DependentUpon>PTray.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="BaseForm\UserControl1.resx">
@@ -706,6 +729,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HelloLogViewer.resx">
       <DependentUpon>HelloLogViewer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HelloModbus.resx">
+      <DependentUpon>HelloModbus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HelloOOP.resx">
       <DependentUpon>HelloOOP.cs</DependentUpon>
@@ -791,6 +817,9 @@
     <EmbeddedResource Include="HelloTemp.resx">
       <DependentUpon>HelloTemp.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HelloThreadTimer.resx">
+      <DependentUpon>HelloThreadTimer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HelloTimer.resx">
       <DependentUpon>HelloTimer.cs</DependentUpon>
     </EmbeddedResource>
@@ -872,7 +901,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Processing\" />
     <Folder Include="Utilities\Sample\Log\" />
   </ItemGroup>
   <ItemGroup>
