--- a/HelloWinForms/packages.config
+++ b/HelloWinForms/packages.config
@@ -9,6 +9,8 @@
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="4.8.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NModbus" version="3.0.81" targetFramework="net48" />
+  <package id="NModbus.Serial" version="3.0.81" targetFramework="net48" />
   <package id="NPinyin" version="0.2.6321.26573" targetFramework="net48" />
   <package id="OpenCvSharp4" version="4.9.0.20240103" targetFramework="net48" />
   <package id="OpenCvSharp4.Extensions" version="4.9.0.20240103" targetFramework="net48" />
